--- a/dockerfiles/Dockerfile-node
+++ b/dockerfiles/Dockerfile-node
@@ -1,23 +1,59 @@
-FROM node:20-bullseye-slim
+FROM ghcr.io/armando-fandango/ez/ez:0.4-base-bullseye-slim
 
-RUN apt-get -q update \
-    && apt-get -q purge -y snapd \
-    && apt-get -qq install -y --no-install-recommends \
-      software-properties-common \
-      sudo \
-      lsb-release \
-      gnupg2 \
-      ca-certificates \
-      wget curl rsync \
-      build-essential \
-      autoconf automake libtool ninja-build pkg-config \
-      git git-lfs \
-      python-is-python3 python3-pip \
-      mesa-utils \
-      vulkan-tools \
-      nano vim \
-      terminator \
-    && apt-get -q autoremove --purge && apt-get -q clean && rm -rf /var/lib/apt/lists/*
+# TODO: Move it to base
+RUN groupadd --gid 1000 ezdev \
+  && useradd --uid 1000 --gid ezdev --shell /bin/bash --create-home ezdev
+
+ENV NODE_VERSION 20.1.0
+
+RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" \
+    && case "${dpkgArch##*-}" in \
+      amd64) ARCH='x64';; \
+      ppc64el) ARCH='ppc64le';; \
+      s390x) ARCH='s390x';; \
+      arm64) ARCH='arm64';; \
+      armhf) ARCH='armv7l';; \
+      i386) ARCH='x86';; \
+      *) echo "unsupported architecture"; exit 1 ;; \
+    esac \
+    && set -ex \
+    # libatomic1 for arm
+    && apt-get update && apt-get install -y ca-certificates ssh curl wget gnupg dirmngr xz-utils libatomic1 --no-install-recommends \
+    #&& rm -rf /var/lib/apt/lists/* \
+    && for key in \
+      4ED778F539E3634C779C87C6D7062848A1AB005C \
+      141F07595B7B3FFE74309A937405533BE57C7D57 \
+      74F12602B6F1C4E913FAA37AD3A89613643B6201 \
+      DD792F5973C6DE52C432CBDAC77ABFA00DDBF2B7 \
+      61FC681DFB92A079F1685E77973F295594EC4689 \
+      8FCCA13FEF1D0C2E91008E09770F7A9A5AE15600 \
+      C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8 \
+      890C08DB8579162FEE0DF9DB8BEAB4DFCF555EF4 \
+      C82FA3AE1CBEDC6BE46B9360C43CEC45C17AB93C \
+      108F52B48DB57BB0CC439B2997B01419BD92F80A \
+    ; do \
+      gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys "$key" || \
+      gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key" ; \
+    done \
+    && curl -fsSLO --compressed "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION-linux-$ARCH.tar.xz" \
+    && curl -fsSLO --compressed "https://nodejs.org/dist/v$NODE_VERSION/SHASUMS256.txt.asc" \
+    && gpg --batch --decrypt --output SHASUMS256.txt SHASUMS256.txt.asc \
+    && grep " node-v$NODE_VERSION-linux-$ARCH.tar.xz\$" SHASUMS256.txt | sha256sum -c - \
+    && tar -xJf "node-v$NODE_VERSION-linux-$ARCH.tar.xz" -C /usr/local --strip-components=1 --no-same-owner \
+    && rm "node-v$NODE_VERSION-linux-$ARCH.tar.xz" SHASUMS256.txt.asc SHASUMS256.txt \
+    && apt-mark auto '.*' > /dev/null \
+    && find /usr/local -type f -executable -exec ldd '{}' ';' \
+      | awk '/=>/ { print $(NF-1) }' \
+      | sort -u \
+      | xargs -r dpkg-query --search \
+      | cut -d: -f1 \
+      | sort -u \
+      | xargs -r apt-mark manual \
+    #&& apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+    ##&& apt-get -q autoremove --purge && apt-get -q clean && rm -rf /var/lib/apt/lists/* \
+    && ln -s /usr/local/bin/node /usr/local/bin/nodejs \
+    # smoke tests
+    && node --version \
+    && npm --version
 
     SHELL ["/bin/bash", "-c"]
-    CMD ["bash"]
