--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "arora-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ucf-sttc.github.io/arora-web",
+  "homepage": "http://arorasim.ai/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
