--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,9 @@
 # DUID="$(id -u)" DGID="$(id -g)" docker compose run --service-ports --rm node
 
 x-volumes: &volumes
-  - ..:/workspaces
+  - $HOME/workspaces:/home/ezdev/workspaces
 
 x-service-runtime: &service-runtime
-  user: ${DUID}:${DGID}
-  group_add:
-    - sudo
-    - "${DGID}"
-  environment:
-    - DISPLAY
   volumes: *volumes
   working_dir: ${PWD}
 
