--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-# DUID="$(id -u)" DGID="$(id -g)" docker compose
-# DUID="$(id -u)" DGID="$(id -g)" docker compose run --service-ports --rm node
+# docker compose run --service-ports --rm node
 
 x-volumes: &volumes
   - $HOME/workspaces:/home/ezdev/workspaces
@@ -12,10 +11,9 @@ services:
   node:
     <<: [*service-runtime]
     image: ghcr.io/armando-fandango/ez/ez:0.4-node20-bullseye-slim
-    container_name: node-test
     command: /bin/sh -c "while sleep 1000; do :; done"
     ports:
-      - "3000:3000"
+      - "3000"
     build: 
       context: .
       dockerfile: dockerfiles/Dockerfile-node
