--- a/.gitignore
+++ b/.gitignore
@@ -226,6 +226,7 @@ yarn-error.log*
 /node_modules
 /.pnp
 .pnp.js
+.pnpm-store
 
 # testing
 /coverage
@@ -266,3 +267,4 @@ yarn-error.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
