--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,50 +1,3 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "standard-with-typescript",
-        "airbnb",
-        "airbnb-typescript",
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:react/jsx-runtime",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:@typescript-eslint/recommended-requiring-type-checking",
-        "plugin:prettier/recommended",
-        "plugin:import/recommended"
-    ],
-    "overrides": [
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "tsconfigRootDir": ".",
-        "project": [
-            "./tsconfig.json"
-        ]
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "rules": {
-        "linebreak-style": "off",
-        // Configure prettier
-        "prettier/prettier": [
-            "error",
-            {
-                "printWidth": 80,
-                "endOfLine": "lf",
-                "singleQuote": true,
-                "tabWidth": 2,
-                "indentStyle": "space",
-                "useTabs": true,
-                "trailingComma": "es5"
-            }
-        ]
-    }
+  "extends": "next/core-web-vitals"
 }
